# comp_vision

./: .gitignore  README.md  dataset_stats.py  eval.py  main.py  pyproject.toml  run_elevated.fish  run_tf_with_priority.fish  train_with_priority.fish  unet_train.py
config/: __init__.py  common.py  default.py
data/: __init__.py  augmentation.py  collector.py
models/: __init__.py  unet.py
models/sr_gan/: __init__.py  srgan.py  subs.py
old_fiiles_from_root/: unet_eval_on_patches.py
scripts/: __init__.py  _test_augment.py  _test_dir.py  dataset_stats.py  import_tf.py  upscale_image.py
training/: __init__.py  callbacks.py  train.py
